--- a/config/subt_mrs_velodyne.yaml
+++ b/config/subt_mrs_velodyne.yaml
@@ -4,7 +4,7 @@ common:
     # cmu_rc7/imu/data   --> Laurel_Caverns
     # /imu/data   --> Long_Corridor
     # cmu_sp1/imu/data   --> MultiFloor
-    imu_topic:  "/imu/data"
+    imu_topic:  "cmu_sp1/imu/data"
     time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
     icp_en: true
 
